--- a/css/styles.css
+++ b/css/styles.css
@@ -29,20 +29,10 @@
 body {
 	font-family: var(--primary-font);
 	color: var(--SLATE);
-	background-color: var(--WHITE);
+	background-color: rgba(46, 47, 66, 0.2);
 	font-size: var(--primary-font-size);
 	line-height: var(--primary-line-height);
 	letter-spacing: var(--primary-letter-spacing);
-
-	background-image: linear-gradient(
-			rgba(46, 47, 66, 0.2),
-			rgba(46, 47, 66, 0.2)
-		),
-		url(../img/hero-background.jpg);
-	background-repeat: no-repeat;
-	/* background-position: center; */
-
-	background-size: cover;
 }
 
 a {
@@ -92,11 +82,40 @@ img {
 	}
 }
 
+/* .header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 16px 16px;
+	position: fixed;
+	margin: 0 auto;
+} */
+
 .header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 16px 16px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: 0 auto; /* Автоматичні бокові відступи (відцентрування) */
+	width: 80%; /* Ширина елемента */
+	max-width: 1200px; /* Максимальна ширина для більшого екрана */
+	border-radius: 0 0 8px 8px;
+}
+
+.header-scrolled {
+	background-color: rgba(
+		46,
+		47,
+		66,
+		0.6
+	); /* Колір бекграунду при прокручуванні */
+	color: rgb(242, 248, 250);
+	transition: color 0.8s ease;
+	transition: background-color 0.8s ease; /* Плавний перехід */
 }
 .logo {
 	font-size: 24px;
@@ -126,8 +145,19 @@ img {
 .conteiner {
 }
 .hero {
-	width: 100%;
-	/* height: 600px; */
+	height: 600px;
+	background-image: linear-gradient(
+			rgba(46, 47, 66, 0.2),
+			rgba(46, 47, 66, 0.2)
+		),
+		url(../img/hero-background.jpg);
+	background-repeat: no-repeat;
+
+	background-size: cover;
+}
+.heroTitle {
+	padding-top: 40px;
+	font-size: 56px;
 }
 .aboutMe {
 }
