--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
 	--primary-font: 'Roboto', sans-serif;
 	--Iris: #a52a2a;
 	--OCEAN: #800000;
-	--active: #2196f3;
+	--navy-green: #049618;
+	--active: rgb(27, 68, 34);
+	--GREY-SCALE: rgb(45, 105, 48);
 	--NAVY-BLUE: #2e2f42;
 	--GREEN: #31d0aa;
 	--SLATE: #434455;
@@ -68,6 +70,18 @@ img {
 	margin: 0 auto;
 	padding: 0 16px;
 }
+/* .button {
+	background-color: #4caf50; 
+	color: white; 
+	font-size: 16px;
+	border: none; 
+	border-radius: 4px; 
+	cursor: pointer; 
+	transition: background-color 0.3s ease; 
+}
+.button:hover {
+	background-color: #45a049; 
+} */
 /* Tablet screen*/
 @media screen and (min-width: 768px) {
 	.container {
@@ -101,8 +115,9 @@ img {
 	left: 0;
 	right: 0;
 	margin: 0 auto; /* Автоматичні бокові відступи (відцентрування) */
-	width: 80%; /* Ширина елемента */
-	max-width: 1200px; /* Максимальна ширина для більшого екрана */
+	/* width: 80%; Ширина елемента */
+	max-width: 1158px;
+	/* max-width: 1200px; Максимальна ширина для більшого екрана */
 	border-radius: 0 0 8px 8px;
 }
 
@@ -118,10 +133,17 @@ img {
 	transition: background-color 0.8s ease; /* Плавний перехід */
 }
 .logo {
+	color: var(--GREY-SCALE);
 	font-size: 24px;
 	font-weight: bold;
 	line-height: 1.17;
 	letter-spacing: 0.03em;
+}
+.logo:hover,
+.logo:focus {
+	text-shadow: 0px 0px 10px var(--active);
+	color: var(--active);
+	transition: 500ms;
 }
 .nav {
 	display: flex;
@@ -133,32 +155,83 @@ img {
 }
 .navList {
 	display: flex;
-	gap: 8px;
+	gap: 16px;
+}
+
+.navListOne {
+}
+
+.navLink {
+	color: var(--GREY-SCALE);
+}
+.navLink:hover,
+.navLink:focus {
+	text-shadow: 0px 0px 10px var(--active);
+	color: var(--active);
+	transition: 500ms;
 }
 .active {
 	color: var(--active);
-}
-.navListOne {
-}
-.navLink {
 }
 .conteiner {
 }
 .hero {
 	height: 600px;
 	background-image: linear-gradient(
-			rgba(46, 47, 66, 0.2),
-			rgba(46, 47, 66, 0.2)
+			rgba(46, 47, 66, 0.4),
+			rgba(46, 47, 66, 0.4)
 		),
 		url(../img/hero-background.jpg);
 	background-repeat: no-repeat;
-
 	background-size: cover;
+
+	padding-top: 120px;
 }
 .heroTitle {
 	padding-top: 40px;
 	font-size: 56px;
 }
+.heroContent {
+	text-align: center;
+}
+.heroText {
+	color: var(--GREY-SCALE); /* Колір тексту */
+	font-size: 36px; /* Розмір шрифту */
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Тінь тексту */
+	margin-top: 28px; /* Відступ зверху */
+	margin-bottom: 20px; /* Відступ знизу */
+}
+.heroButton {
+	padding: 10px 20px; /* Внутрішні відступи */
+	font-weight: 900;
+	width: 150px;
+	height: 50px;
+	cursor: pointer;
+	background: rgb(51, 51, 51, 0);
+	margin: 10px;
+	border: none;
+	border-radius: 10px;
+	/* box-shadow: -5px -5px 15px #444, 5px 5px 15px #222, inset 5px 5px 10px #444,
+		inset -5px -5px 10px #222; */
+
+	color: var(--GREY-SCALE);
+
+	/* color: #24f03f; */
+	font-size: 32px;
+}
+
+.heroButton:hover {
+	/* color: #93f071; */
+	color: var(--active);
+
+	text-shadow: 0px 0px 10px var(--active);
+	/* box-shadow: -5px -5px 15px #444, 5px 5px 15px #222, inset 5px 5px 10px #222,
+		inset -5px -5px 10px #444; */
+	font-size: 34px;
+
+	transition: 500ms;
+}
+
 .aboutMe {
 }
 .blog {
